; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_tun.c_do_ifconfig_ipv4.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_tun.c_do_ifconfig_ipv4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tuntap = type { i8*, i8*, i32, i8*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.env_set = type opaque
%struct.argv = type { i32 }
%struct.gc_arena = type { i32 }

@M_FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [153 x i8] c"Sorry, but I don't know how to do 'ifconfig' commands on this operating system.  You should ifconfig your TUN/TAP device manually or use an --up script.\00", align 1
@IFCONFIG_PATH = common dso_local global i32 0, align 4
@M_INFO = common dso_local global i32 0, align 4
@NI_IP_NETMASK = common dso_local global i32 0, align 4
@NI_OPTIONS = common dso_local global i32 0, align 4
@RT_DEFINED = common dso_local global i8* null, align 8
@RT_METRIC_DEFINED = common dso_local global i8* null, align 8
@S_FATAL = common dso_local global i32 0, align 4
@management = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tuntap*, i8*, i32, %struct.env_set*, i32*)* @do_ifconfig_ipv4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_ifconfig_ipv4(%struct.tuntap* %0, i8* %1, i32 %2, %struct.env_set* %3, i32* %4) #0 {
  %6 = alloca %struct.tuntap*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.env_set*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca %struct.argv, align 4
  %15 = alloca %struct.gc_arena, align 4
  store %struct.tuntap* %0, %struct.tuntap** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.env_set* %3, %struct.env_set** %9, align 8
  store i32* %4, i32** %10, align 8
  %16 = load %struct.tuntap*, %struct.tuntap** %6, align 8
  %17 = call i32 @is_tun_p2p(%struct.tuntap* %16)
  store i32 %17, i32* %11, align 4
  store i8* null, i8** %12, align 8
  store i8* null, i8** %13, align 8
  %18 = call i32 (...) @argv_new()
  %19 = getelementptr inbounds %struct.argv, %struct.argv* %14, i32 0, i32 0
  store i32 %18, i32* %19, align 4
  %20 = call i32 (...) @gc_new()
  %21 = getelementptr inbounds %struct.gc_arena, %struct.gc_arena* %15, i32 0, i32 0
  store i32 %20, i32* %21, align 4
  %22 = load %struct.tuntap*, %struct.tuntap** %6, align 8
  %23 = getelementptr inbounds %struct.tuntap, %struct.tuntap* %22, i32 0, i32 0
  %24 = load i8*, i8** %23, align 8
  %25 = call i8* @print_in_addr_t(i8* %24, i32 0, %struct.gc_arena* %15)
  store i8* %25, i8** %12, align 8
  %26 = load %struct.tuntap*, %struct.tuntap** %6, align 8
  %27 = getelementptr inbounds %struct.tuntap, %struct.tuntap* %26, i32 0, i32 1
  %28 = load i8*, i8** %27, align 8
  %29 = call i8* @print_in_addr_t(i8* %28, i32 0, %struct.gc_arena* %15)
  store i8* %29, i8** %13, align 8
  %30 = load i32, i32* @M_FATAL, align 4
  %31 = call i32 (i32, i8*, ...) @msg(i32 %30, i8* getelementptr inbounds ([153 x i8], [153 x i8]* @.str, i64 0, i64 0))
  %32 = call i32 @gc_free(%struct.gc_arena* %15)
  %33 = call i32 @argv_reset(%struct.argv* %14)
  ret void
}

declare dso_local i32 @is_tun_p2p(%struct.tuntap*) #1

declare dso_local i32 @argv_new(...) #1

declare dso_local i32 @gc_new(...) #1

declare dso_local i8* @print_in_addr_t(i8*, i32, %struct.gc_arena*) #1

declare dso_local i32 @msg(i32, i8*, ...) #1

declare dso_local i32 @gc_free(%struct.gc_arena*) #1

declare dso_local i32 @argv_reset(%struct.argv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
